--- a/archive.html
+++ b/archive.html
@@ -72,8 +72,10 @@
             
             
 <article class="listpage"><header><h1>Archive</h1>
-    </header><p>No posts found.</p>
-</article>
+    </header><ul class="postlist"><li>
+<a href="2017/">2017</a>
+            (1)
+    </li></ul></article>
 </div>
         <!--End of body content-->
 
